--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+.full{
+  max-height: 40em;
+  max-width: 20em;
+  margin: auto;
+  margin-top: 1em;
+  background-color: #61dafb;
+  text-align: center;
+
+}
+
+#alt1{
+  text-align: start;
+}
+#alt2{
+  text-align: end;
+  margin-top: -2.3em;
+}
+.items{
+  background-color: blanchedalmond;
+  width:96%;
+  margin-left: 0.2em;
+  text-align: start;
+  box-sizing: border-box;
+}
+.input{
+ width:100%;
+ padding: 3px;
+ box-sizing: border-box;
+ background-color: aqua;
+}
